button adds time stamp and after five clicks bg is black, also own-btn class in css to stop stretching

--- a/src/app/display-details/display-details.component.css
+++ b/src/app/display-details/display-details.component.css
@@ -1,6 +1,11 @@
 * {
     display: grid;
-    justify-content: center;
+    justify-items: center;
+}
+
+.oma-btn {
+    display: inline-block;
+    
 }
 
 .text {
